--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,6 +35,7 @@ article {
 h1 {
   font-size: 2rem;
   font-weight: 500;
+  text-align: center;
 }
 
 .subtitle {
@@ -43,6 +44,10 @@ h1 {
   text-align: center;
   margin: unset;
   margin: 0 2rem;
+}
+
+.margintop {
+  margin-top: 2rem;
 }
 
 footer {
